<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/title_create_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="36dp"
        android:text="Register New Account"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBox"
        app:layout_constraintTop_toBottomOf="@id/title_create_profile"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:hint="First Name"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded_edittext"
                android:hint="Last Name"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded_edittext"
                android:hint="Email"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:hint="Date of Birth"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:hint="Phone Number"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:hint="Password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/checkBoxOrganizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Register as Organizer"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/facilityLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/editTextFacility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:hint="Facility Name"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextFacilityLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#FFFFFF"
                    android:hint="Facility Location"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBoxGeolocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Allow Geolocation"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/checkBoxNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Allow Notifications"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="#000000"
        android:elevation="4dp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Sign Up" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
