<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"

    tools:context=".MainActivity">

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to Snow!"
        android:textSize="35sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Subtitle Text -->
    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Snow is an app designed\n to help you organize\n and find events in your area!"
        android:textSize="14sp"
        android:textColor="#D3D3D3"
        android:gravity="center"
        android:paddingTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <!-- Login Prompt -->
    <TextView
        android:id="@+id/loginPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login to get started"
        android:textSize="14sp"
        android:textColor="#D3D3D3"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Login Box -->

    <!-- Sign Up Link Text -->
    <LinearLayout
        android:id="@+id/loginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_margin="50dp"
        android:background="@drawable/rounded_gray_background"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPrompt"
        app:layout_constraintWidth_percent="0.8">

        <Button
            android:id="@+id/modeToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Toggle Mode"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_button"
            android:hint="Email"
            android:padding="12dp"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="15sp" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_button"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="15sp" />




        <!-- Login Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@null"
            android:text="Login"
            android:textColor="#000000"
            android:textSize="14sp"/>

        <!-- Sign in with Device Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInWithDeviceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_black_button"
            android:text="Sign in with Device"
            android:textColor="#FFFFFF"
            android:textSize="14sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Sign up"
        android:textColor="#D3D3D3"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="15dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>